--- a/index.html
+++ b/index.html
@@ -1,1 +1,183 @@
-Hello Mello
+<!DOCTYPE html>
+<html lang="en" class="fullHeight">
+
+<head>
+<title>Mello Creations</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="">
+<meta name="author" content="">
+<link href='https://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Titillium+Web:400,200' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Noto+Sans:400,700' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Noto+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+
+<link rel="stylesheet" type="text/css" href="css/component.css">
+
+<link href="css/bootstrap.css" rel="stylesheet">
+<link href="css/menu.css" rel="stylesheet">
+<link href="css/mello.css" rel="stylesheet">
+
+<link href="css/content.css" rel="stylesheet">
+<link href="css/what_we_do.css" rel="stylesheet">
+<link href="css/about_us.css" rel="stylesheet">
+<link href="css/collaborators.css" rel="stylesheet">
+<link href="css/projects.css" rel="stylesheet">
+<link href="css/projects.css" rel="stylesheet">
+
+
+<script src="js/jquery-1.9.1.min.js"></script>
+<script src="js/modernizr.custom.js"></script>
+
+<!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+<!--[if lt IE 9]>
+  <script src="../assets/js/html5shiv.js"></script>
+<![endif]-->
+
+</head>
+
+<body class="fullHeight">
+<div class="fullHeight container">
+	<div class="row-fluid fullHeight">
+		<div class="span3"></div>
+		<div id="contentBack" class="span9 fullHeight"></div>
+	</div>
+
+<div class="container">
+	<div class="row-fluid central_container" >
+		<div class="span3">
+			<div id="logo" class="row-fluid">
+				<div class="span12 logo">
+					<a href=""><img src="img/logo_white.png" style="width:220px;"></a>
+				</div>
+			</div>
+			<div class="row-fluid">
+				<div class="span12">
+				</div>
+			</div>
+			<div class="row-fluid">
+				<div class="span12">
+				</div>
+			</div>
+			<div id="menu" class="row-fluid meni">
+				<div class="span12">
+					<ul>
+						<li id="what_we_do" class="meni-element text-right whatWeDoColor" onclick="loadCategory('what_we_do','whatWeDoC')" onselectstart='return false;'>
+							<p>What we do</p>
+						</li>
+						<li id="projects" class="meni-element text-right projectsColor" onclick="loadCategory('projects','projectsC')" onselectstart='return false;'>
+							<p>Projects</p>
+						</li>
+						<li id="collaborators" class="meni-element text-right collaboratorsColor" onclick="loadCategory('collaborators','collaboratorsC')" onselectstart='return false;'>
+							<p>Collaborators</p>
+						</li>
+						<li id="about_us" class="meni-element text-right aboutUsColor" onclick="loadCategory('about_us','aboutUsC')" onselectstart='return false;'>
+							<p>About us</p>
+						</li>
+						<li id="contact" class="meni-element text-right contactColor" onclick="loadCategory('contact','contactC')" onselectstart='return false;'>
+							<p>Contact us</p>
+						</li>
+					</ul>
+				</div>
+			</div>
+			<div class="row-fluid">
+				<div class="span12">
+				</div>
+			</div>
+			<div class="row-fluid">
+				<div class="span12">
+				</div>
+			</div>
+			<div class="row-fluid ">
+				<div class="span4 hi-icon-wrap hi-icon-effect-1 hi-icon-effect-1a">
+					<a href="#set-1" class="hi-icon hi-icon-twitter">Twitter</a>
+				</div>
+				<div class="span4 hi-icon-wrap hi-icon-effect-1 hi-icon-effect-1a">
+					<a href="#set-1" class="hi-icon hi-icon-facebook">Facebook</a>
+				</div>
+				<div class="span4 hi-icon-wrap hi-icon-effect-1 hi-icon-effect-1a">
+					<a href="#set-1" class="hi-icon hi-icon-linkedin">LinkedIn</a>
+				</div>
+			</div>
+
+
+		</div>
+		<div id="contentWrapper" class="span9 fullHeight">
+
+		</div>
+	</div>
+</div>
+</div>
+<script>
+var current_page="";
+function loadCategory(page) {
+
+	if(current_page==page){
+		return;
+	}
+	$('#'+current_page).css('background-color','');
+	current_page=page;
+
+	var cont = 'categories/' + page + '.html #content';
+	var color = "#00000000";
+	if(page=="what_we_do"){
+		color = "rgba(173, 238, 52, 0.7)";
+	} else if (page=="projects") {
+		color = "rgba(173, 0, 255, 0.6)";
+	} else if(page=="collaborators") {
+		color = "rgba(255,234, 0, 0.6)";
+	} else if(page=="about_us") {
+		color = "rgba(23, 132, 234, .6)";
+	} else if(page=="contact") {
+		color = "rgba(255,0,100,0.6)";
+	}
+	$('#'+current_page).css('background-color',color);
+
+	$("#contentWrapper, #contentBack").fadeOut(400, function () {
+		$('#contentBack').css('background-color',color);
+		$('#contentWrapper').load(cont, function() {
+			$('#contentWrapper, #contentBack').fadeIn();
+		});
+	});
+}
+
+var cleansedPathname = window.location.pathname.replace(/\/+/g,"/");
+var pathArray = cleansedPathname.split('/');
+
+
+var lastPath=null;
+if( pathArray.length>1 ) {
+	var x = pathArray[pathArray.length-1];
+	if(x=='' || x==null)
+		x = pathArray[pathArray.length-2];
+	lastPath = x;
+}
+
+switch(lastPath){
+	case "what_we_do":
+	case "projects":
+	case "collaborators":
+	case "about_us":
+	case "contact":
+		break;
+	default:
+		lastPath = "what_we_do";
+		break;
+}
+// alert(lastPath);	
+$(document).ready(loadCategory('what_we_do','whatWeDoC'));
+
+</script>
+
+<!-- Google Analytics -->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-42123900-1', 'mello.mk');
+  ga('send', 'pageview');
+
+</script>
+</body>
+</html>
